--- a/src/partials/home-page-footer.html
+++ b/src/partials/home-page-footer.html
@@ -5,55 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/footer.css" />
   </head>
   <body>
     <footer class="footer">
-        <div class="container">
-          <div class="footer-bloc">
-           <h2 class="footer-logo"><a href="./src/index.html" class="footer-logo-link link">MIMIHO</a></h2>
-           <div class="footer-bloc-wrap">
-           <div class="footer-site-navigation">
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a href="./src/index.html" class="footer-link link">Головна</a>
-          </li>
-          <li class="footer-item">
-            <a href="./src/restaurant.html" class="footer-link link">Ресторан</a>
-          </li>
-          <li class="footer-item">
-            <a href="./src/hotel.html" class="footer-link link">Готель</a>
-          </li>
+      <div class="container">
+        <div class="footer-bloc">
+          <h2 class="footer-logo">
+            <a href="./src/index.html" class="footer-logo-link link">MIMIHO</a>
+          </h2>
+          <div class="footer-bloc-wrap">
+            <div class="footer-site-navigation">
+              <ul class="footer-list list">
+                <li class="footer-item">
+                  <a href="./src/index.html" class="footer-link link"
+                    >Головна</a
+                  >
+                </li>
+                <li class="footer-item">
+                  <a href="./src/restaurant.html" class="footer-link link"
+                    >Ресторан</a
+                  >
+                </li>
+                <li class="footer-item">
+                  <a href="./src/hotel.html" class="footer-link link">Готель</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer-soc-bloc">
+              <ul class="footer-soc-list list">
+                <li class="footer-soc-item">
+                  <a href="#" target="_blank" class="footer-soc-link link">
+                    <span class="footer-soc-text">Instagram</span>
+                    <svg class="footer-soc-icon" width="24px" height="24px">
+                      <use
+                        href="./img/icons-sprite.svg#icon-instagram-icon"
+                      ></use></svg
+                  ></a>
+                </li>
+                <li class="footer-soc-item">
+                  <a href="#" target="_blank" class="footer-soc-link link">
+                    <span class="footer-soc-text">Facebook</span>
+                    <svg class="footer-soc-icon" width="24px" height="24px">
+                      <use
+                        href="./img/icons-sprite.svg#icon-facebook-icon"
+                      ></use></svg
+                  ></a>
+                </li>
+                <li class="footer-soc-item">
+                  <a href="#" target="_blank" class="footer-soc-link link">
+                    <span class="footer-soc-text">Telegram</span>
+                    <svg class="footer-soc-icon" width="24px" height="24px">
+                      <use
+                        href="./img/icons-sprite.svg#icon-telegram-icon"
+                      ></use></svg
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <div class="footer-soc-bloc">
-        </ul>
-          <ul class="footer-soc-list list">
-          <li class="footer-soc-item">
-              <a href="#" target="_blank" class="footer-soc-link link">
-              <span class="footer-soc-text">Instagram</span>
-                <svg class="footer-soc-icon" width="24px" height="24px">
-                  <use href="./img/icons-sprite.svg#icon-instagram-icon"></use>
-                </svg></a>
-            </li>
-            <li class="footer-soc-item">
-              <a href="#" target="_blank" class="footer-soc-link link">
-              <span class="footer-soc-text">Facebook</span>
-                <svg class="footer-soc-icon" width="24px" height="24px">
-                  <use href="./img/icons-sprite.svg#icon-facebook-icon"></use>
-                </svg></a>
-            </li>
-            <li class="footer-soc-item">
-              <a href="#" target="_blank" class="footer-soc-link link">
-              <span class="footer-soc-text">Telegram</span>
-                <svg class="footer-soc-icon" width="24px" height="24px">
-                  <use href="./img/icons-sprite.svg#icon-telegram-icon"></use>
-                </svg></a>
-            </li>
-            
-          </ul>
-        </div>
-      </div>
-      </div>
       </div>
     </footer>
   </body>
