--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,18 @@
 
 
+@import url('/src/css/home-page-header.css');
 
+
+
+@font-face {
+  font-family: 'Film P3';
+  src: local('Film P3 Bold'), local('Film-P3-Bold'),
+    url('FilmP3Bold.woff2') format('woff2'),
+    url('FilmP3Bold.woff') format('woff'),
+    url('FilmP3Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
 
 
 /* Reset styles */
