--- a/src/partials/home-page-header.html
+++ b/src/partials/home-page-header.html
@@ -1,10 +1,10 @@
 <header class="site-header">
     <div class="container">
-      <a href="./" class="header-logo">MIMIHO</a>
+      <a href="../index.html" class="header-logo">MIMIHO</a>
 
       <ul class="header-nav-list">
         <li class="header-nav-item">
-          <a href="#" class="header-nav-link">Ресторан</a
+          <a href="../restaurant.html" class="header-nav-link">Ресторан</a
           ><a href="tel:0955559533" class="header-nav-contacts"
             ><svg class="header-nav-icon" width="24" height="24">
               <use href="../img/icons-sprite.svg#icon-phone-icon"></use>
@@ -13,7 +13,7 @@
           >
         </li>
         <li class="header-nav-item">
-          <a href="#" class="header-nav-link">Готель</a
+          <a href="../hotel.html" class="header-nav-link">Готель</a
           ><a href="tel:0668491089" class="header-nav-contacts"
             ><svg class="header-nav-icon" width="24" height="24">
               <use href="../img/icons-sprite.svg#icon-phone-icon"></use>
