--- a/src/css/home-page-header.css
+++ b/src/css/home-page-header.css
@@ -17,11 +17,9 @@
 
   width: 100vw;
   z-index: 999;
-
-  background-color: #333333d2;
 }
 
-.container {
+.site-header-container {
   position: relative;
 
   padding-left: 15px;
@@ -30,13 +28,11 @@
   margin-right: auto;
 }
 
-.site-header .container {
+.site-header .site-header-container {
   display: flex;
   align-items: center;
 }
 .header-logo {
-  font-family: 'Film P3';
-
   display: inline-block;
   width: 114px;
 
@@ -44,7 +40,7 @@
   padding-top: 16px;
   padding-bottom: 16px;
 
-  
+  font-family: "Film P3";
   font-size: 36px;
   line-height: 1.08;
   letter-spacing: 0.3em;
@@ -66,7 +62,7 @@
   padding-top: 16px;
   padding-bottom: 16px;
 
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-weight: 500;
   font-size: 16px;
   line-height: 1.25;
@@ -77,7 +73,7 @@
 .header-nav-contacts {
   display: flex;
   align-items: center;
- 
+
   padding-top: 16px;
   padding-bottom: 16px;
 }
@@ -111,7 +107,7 @@
 }
 /* Mobile Adaptive */
 @media screen and (max-width: 413px) {
-  .container {
+  .site-header-container {
     width: 100%;
   }
 
@@ -122,6 +118,12 @@
   .header-nav-list {
     flex-direction: column;
     gap: 4px;
+  }
+
+  .header-nav-item {
+    width: 112px;
+    justify-content: space-between;
+    gap: 0;
   }
 
   .header-nav-link {
@@ -136,7 +138,7 @@
 }
 
 @media screen and (min-width: 414px) {
-  .container {
+  .site-header-container {
     width: 414px;
   }
 }
@@ -144,7 +146,7 @@
 /* Tablet Adaptive */
 
 @media screen and (min-width: 1024px) {
-  .container {
+  .site-header-container {
     width: 960px;
   }
 
@@ -184,7 +186,7 @@
   .header-nav-tel {
     display: inline-block;
 
-    font-family: 'Montserrat';
+    font-family: "Montserrat";
     font-size: 14px;
     line-height: 1.21;
     letter-spacing: 0.02em;
@@ -200,7 +202,7 @@
 /* Desktop Adaptive */
 
 @media screen and (min-width: 1280px) {
-  .container {
+  .site-header-container {
     width: 1140px;
   }
 
