--- a/src/partials/home-page-header.html
+++ b/src/partials/home-page-header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-    <div class="container">
+    <div class="site-header-container">
       <a href="../index.html" class="header-logo">MIMIHO</a>
 
       <ul class="header-nav-list">
