--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,2 +1,3 @@
 @import url("./home-page-header.css");
-/* @import url("./footer.css"); */
+@import url("./home-page-hero.css");
+@import url("./footer.css");
