--- a/src/partials/home-page-header.html
+++ b/src/partials/home-page-header.html
@@ -7,7 +7,7 @@
           <a href="./restaurant.html" class="header-nav-link">Ресторан</a
           ><a href="tel:0955559533" class="header-nav-contacts"
             ><svg class="header-nav-icon" width="24" height="24">
-              <use href="../img/icons-sprite.svg#icon-phone-icon"></use>
+              <use href="./img/icons-sprite.svg#icon-phone-icon"></use>
             </svg>
             <span class="header-nav-tel">095 555 95 33</span></a
           >
@@ -16,7 +16,7 @@
           <a href="./hotel.html" class="header-nav-link">Готель</a
           ><a href="tel:0668491089" class="header-nav-contacts"
             ><svg class="header-nav-icon" width="24" height="24">
-              <use href="../img/icons-sprite.svg#icon-phone-icon"></use>
+              <use href="./img/icons-sprite.svg#icon-phone-icon"></use>
             </svg>
             <span class="header-nav-tel">066 849 10 89</span></a
           >
@@ -27,21 +27,21 @@
         <li class="header-social-item">
           <a href="#" class="header-social-link">
             <svg class="header-social-icon" width="24" height="24">
-              <use href="../img/icons-sprite.svg#icon-instagram-icon"></use>
+              <use href="./img/icons-sprite.svg#icon-instagram-icon"></use>
             </svg>
           </a>
         </li>
         <li class="header-social-item">
           <a href="#" class="header-social-link">
             <svg class="header-social-icon" width="24" height="24">
-              <use href="../img/icons-sprite.svg#icon-facebook-icon"></use>
+              <use href="./img/icons-sprite.svg#icon-facebook-icon"></use>
             </svg>
           </a>
         </li>
         <li class="header-social-item">
           <a href="#" class="header-social-link">
             <svg class="header-social-icon" width="24" height="24">
-              <use href="../img/icons-sprite.svg#icon-telegram-icon"></use>
+              <use href="./img/icons-sprite.svg#icon-telegram-icon"></use>
             </svg>
           </a>
         </li>
