--- a/src/partials/home-page-hero.html
+++ b/src/partials/home-page-hero.html
@@ -7,7 +7,7 @@
           <div class="hero-group">
             <a href="#" class="hero-location-link"
               ><svg class="hero-location-icon" width="20" height="20">
-                <use href="../img/icons-sprite.svg#icon-map-icon"></use>
+                <use href="./img/icons-sprite.svg#icon-map-icon"></use>
               </svg>
               Україна, м. Полтава, <br />
               вул. Маршала Бірюзова, 15
