--- a/src/partials/home-page-header.html
+++ b/src/partials/home-page-header.html
@@ -25,21 +25,21 @@
 
       <ul class="header-social-list">
         <li class="header-social-item">
-          <a href="#" class="header-social-link">
+          <a href="https://www.instagram.com/" target="_blank" class="header-social-link">
             <svg class="header-social-icon" width="24" height="24">
               <use href="./img/icons-sprite.svg#icon-instagram-icon"></use>
             </svg>
           </a>
         </li>
         <li class="header-social-item">
-          <a href="#" class="header-social-link">
+          <a href="https://uk-ua.facebook.com/" target="_blank" class="header-social-link">
             <svg class="header-social-icon" width="24" height="24">
               <use href="./img/icons-sprite.svg#icon-facebook-icon"></use>
             </svg>
           </a>
         </li>
         <li class="header-social-item">
-          <a href="#" class="header-social-link">
+          <a href="https://web.telegram.org/z/" target="_blank" class="header-social-link">
             <svg class="header-social-icon" width="24" height="24">
               <use href="./img/icons-sprite.svg#icon-telegram-icon"></use>
             </svg>
