--- a/src/partials/home-page-hero.html
+++ b/src/partials/home-page-hero.html
@@ -5,7 +5,7 @@
           <h2 class="hero-subtitle">СМАК ЖИТТЯ 24/7</h2>
 
           <div class="hero-group">
-            <a href="#" class="hero-location-link"
+            <a href="https://goo.gl/maps/1Gj1eipYqzHHkmQC6" target="_blank" class="hero-location-link"
               ><svg class="hero-location-icon" width="20" height="20">
                 <use href="./img/icons-sprite.svg#icon-map-icon"></use>
               </svg>
