--- a/src/partials/rest-page-section2.html
+++ b/src/partials/rest-page-section2.html
@@ -1,209 +1,204 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/menu.css">
-</head>
-<body>
-        <section class="section-menu">
-            <div class="container">
+<section class="section-menu">
+    <div class="container">
         <h2 class="menu-title">МЕНЮ РЕСТОРАНУ </h2>
         <div class="tablet-position">
-        <div class="tablet-left">
-        <table class="menu-table">
-            <caption class="menu-caption">Гарячі страви</caption>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Борщ з телятини з квасолею </p>
-                    <p class="menu-after-title">Телятина, картопля, капуста, морква, цибуля, квасоля, часник, помідори, зелень, сметана</p>
-                </td>
-                <td class="menu-td">400 г</td>
-                <td class="menu-td">240 грн</td>
-            </tr>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Суп сирний з куркою</p>
-                    <p class="menu-after-title">Курятина, картопля, морква, цибуля, печериці, сир м’який, зелень</p>
-                </td>
-                <td class="menu-td">400 г</td>
-                <td class="menu-td">200 грн</td>
-            </tr>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Паста карбонара</p>
-                    <p class="menu-after-title">Паста тальятеле, бекон, вершки, сир пармезан, яйце, зелень</p>
-                </td>
-                <td class="menu-td">350 г</td>
-                <td class="menu-td">430 грн</td>
-            </tr>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Стейк зі свинини</p>
-                <p class="menu-after-title">Свиняча вирізка, спеціі, подається з соусом солодкий чилі та овочами</p></td>
-                <td class="menu-td">400 г</td>
-                <td class="menu-td">500 грн</td>
-            </tr>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Горбуша в соусі з білого вина</p>
-                <p class="menu-after-title">Ніжна горбуша, вершковий соус на основі білого вина</p>
-            </td>
-                <td class="menu-td">400 г</td>
-                <td class="menu-td">400 грн</td>
-            </tr>
-        </table>
-        <table class="menu-table">
-            <caption class="menu-caption">Гарніри та закуски</caption>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Запечені овочі</p>
-                <p class="menu-after-title">Кабачок, перець, помідор, баклажан</p>
-            </td>
-                <td class="menu-td">200 г</td>
-                <td class="menu-td">230 грн</td>
-            </tr>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Картопля фрі</p>
-                <p class="menu-after-title">Картопля, соус томатний</p>
-            </td>
-                <td class="menu-td">150 г</td>
-                <td class="menu-td">160 грн</td>
-            </tr>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Картопля по-селянськи</p>
-                <p class="menu-after-title">Картопля, спеції, соус пікантний</p>
-            </td>
-                <td class="menu-td">150 г</td>
-                <td class="menu-td">160 грн</td>
-            </tr>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Хрумкі соління з бочки</p>
-                <p class="menu-after-title">Огірок солений, помідор квашений, квашена капуста, морква по-корейські</p>
-            </td>
-                <td class="menu-td">250 г</td>
-                <td class="menu-td">350 грн</td>
-            </tr>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Крильця курячі в медовому соусі</p>
-                <p class="menu-after-title">Крильця курячі, гірчично-медовий соус, подається з морквою, селерою і соусом блючиз</p>
-            </td>
-                <td class="menu-td">400 г</td>
-                <td class="menu-td">420 грн</td>
-            </tr>
-        </table>
+            <div class="tablet-left">
+                <table class="menu-table">
+                    <caption class="menu-caption">Гарячі страви</caption>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Борщ з телятини з квасолею </p>
+                            <p class="menu-after-title">Телятина, картопля, капуста, морква, цибуля, квасоля, часник,
+                                помідори, зелень, сметана</p>
+                        </td>
+                        <td class="menu-td">400 г</td>
+                        <td class="menu-td">240 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Суп сирний з куркою</p>
+                            <p class="menu-after-title">Курятина, картопля, морква, цибуля, печериці, сир м’який, зелень
+                            </p>
+                        </td>
+                        <td class="menu-td">400 г</td>
+                        <td class="menu-td">200 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Паста карбонара</p>
+                            <p class="menu-after-title">Паста тальятеле, бекон, вершки, сир пармезан, яйце, зелень</p>
+                        </td>
+                        <td class="menu-td">350 г</td>
+                        <td class="menu-td">430 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Стейк зі свинини</p>
+                            <p class="menu-after-title">Свиняча вирізка, спеціі, подається з соусом солодкий чилі та
+                                овочами</p>
+                        </td>
+                        <td class="menu-td">400 г</td>
+                        <td class="menu-td">500 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Горбуша в соусі з білого вина</p>
+                            <p class="menu-after-title">Ніжна горбуша, вершковий соус на основі білого вина</p>
+                        </td>
+                        <td class="menu-td">400 г</td>
+                        <td class="menu-td">400 грн</td>
+                    </tr>
+                </table>
+                <table class="menu-table">
+                    <caption class="menu-caption">Гарніри та закуски</caption>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Запечені овочі</p>
+                            <p class="menu-after-title">Кабачок, перець, помідор, баклажан</p>
+                        </td>
+                        <td class="menu-td">200 г</td>
+                        <td class="menu-td">230 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Картопля фрі</p>
+                            <p class="menu-after-title">Картопля, соус томатний</p>
+                        </td>
+                        <td class="menu-td">150 г</td>
+                        <td class="menu-td">160 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Картопля по-селянськи</p>
+                            <p class="menu-after-title">Картопля, спеції, соус пікантний</p>
+                        </td>
+                        <td class="menu-td">150 г</td>
+                        <td class="menu-td">160 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Хрумкі соління з бочки</p>
+                            <p class="menu-after-title">Огірок солений, помідор квашений, квашена капуста, морква
+                                по-корейські</p>
+                        </td>
+                        <td class="menu-td">250 г</td>
+                        <td class="menu-td">350 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Крильця курячі в медовому соусі</p>
+                            <p class="menu-after-title">Крильця курячі, гірчично-медовий соус, подається з морквою,
+                                селерою і соусом блючиз</p>
+                        </td>
+                        <td class="menu-td">400 г</td>
+                        <td class="menu-td">420 грн</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="tablet-right">
+                <table class="menu-table">
+                    <caption class="menu-caption">Салати</caption>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Цезар з куркою</p>
+                            <p class="menu-after-title">Куряче філе, листя салату, помідори чері, сир пармезан, грінки,
+                                соус цезар</p>
+                        </td>
+                        <td class="menu-td">230 г</td>
+                        <td class="menu-td">450 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Цезар з креветками</p>
+                            <p class="menu-after-title">Тигрові креветки, листя салату, помідори чері, сир пармезан,
+                                грінки, соус цезар</p>
+                        </td>
+                        <td class="menu-td">230 г</td>
+                        <td class="menu-td">300 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Грецький салат</p>
+                            <p class="menu-after-title">Свіжі огірок, помідор, болгарський перець, оливки, сир бринза,
+                                листя салату, соус</p>
+                        </td>
+                        <td class="menu-td">230 г</td>
+                        <td class="menu-td">280 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">М’ясний салат</p>
+                            <p class="menu-after-title">Куряче філе або свиняча вирізка, свіжі огірок, помідор,
+                                болгарський перець, соус ранч</p>
+                        </td>
+                        <td class="menu-td">230 г</td>
+                        <td class="menu-td">300 грн</td>
+                    </tr>
+                </table>
+                <table class="menu-table">
+                    <caption class="menu-caption">Десерти </caption>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Торт наполеон</p>
+                        </td>
+                        <td class="menu-td">230 г</td>
+                        <td class="menu-td">300 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Торт маковий</p>
+                        </td>
+                        <td class="menu-td">230 г</td>
+                        <td class="menu-td">300 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Тірамісу</p>
+                        </td>
+                        <td class="menu-td">120 г</td>
+                        <td class="menu-td">260 грн</td>
+                    </tr>
+                </table>
+                <table class="menu-table">
+                    <caption class="menu-caption">Напої</caption>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Чай чорний/зелений</p>
+                        </td>
+                        <td class="menu-td">500 мл</td>
+                        <td class="menu-td">100 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Еспресо</p>
+                        </td>
+                        <td class="menu-td">30 мл</td>
+                        <td class="menu-td">100 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Американо</p>
+                        </td>
+                        <td class="menu-td">150 мл</td>
+                        <td class="menu-td">100 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Капучино</p>
+                        </td>
+                        <td class="menu-td">200 мл</td>
+                        <td class="menu-td">160 грн</td>
+                    </tr>
+                    <tr class="menu-tr">
+                        <td class="menu-td">
+                            <p class="menu-pre-title">Лате</p>
+                        </td>
+                        <td class="menu-td">200 мл</td>
+                        <td class="menu-td">160 грн</td>
+                    </tr>
+                </table>
+                <button type="button" class="menu-btn">Забронювати столик</button>
+            </div>
         </div>
-        <div class="tablet-right">
-        <table class="menu-table">
-            <caption class="menu-caption">Салати</caption>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Цезар з куркою</p>
-                    <p class="menu-after-title">Куряче філе, листя салату, помідори чері, сир пармезан, грінки, соус цезар</p>
-                </td>
-                <td class="menu-td">230 г</td>
-                <td class="menu-td">450 грн</td>
-            </tr>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Цезар з креветками</p>
-                    <p class="menu-after-title">Тигрові креветки, листя салату, помідори чері, сир пармезан, грінки, соус цезар</p>
-                </td>
-                <td class="menu-td">230 г</td>
-                <td class="menu-td">300 грн</td>
-            </tr>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">Грецький салат</p>
-                    <p class="menu-after-title">Свіжі огірок, помідор, болгарський перець, оливки, сир бринза, листя салату, соус</p>
-                </td>
-                <td class="menu-td">230 г</td>
-                <td class="menu-td">280 грн</td>
-            </tr>
-            <tr class="menu-tr">
-                <td class="menu-td">
-                    <p class="menu-pre-title">М’ясний салат</p>
-                <p class="menu-after-title">Куряче філе або свиняча вирізка, свіжі огірок, помідор, болгарський перець, соус ранч</p></td>
-                <td class="menu-td">230 г</td>
-                <td class="menu-td">300 грн</td>
-            </tr>
-        </table>
-        <table class="menu-table">
-            <caption class="menu-caption">Десерти </caption>
-        <tr class="menu-tr">
-            <td class="menu-td">
-                <p class="menu-pre-title">Торт наполеон</p>
-            </td>
-            <td class="menu-td">230 г</td>
-            <td class="menu-td">300 грн</td>
-        </tr>
-        <tr class="menu-tr">
-            <td class="menu-td">
-                <p class="menu-pre-title">Торт маковий</p>
-            </td>
-            <td class="menu-td">230 г</td>
-            <td class="menu-td">300 грн</td>
-        </tr>
-        <tr class="menu-tr">
-            <td class="menu-td">
-                <p class="menu-pre-title">Тірамісу</p>
-            </td>
-            <td class="menu-td">120 г</td>
-            <td class="menu-td">260 грн</td>
-        </tr>
-        </table>
-        <table class="menu-table">
-            <caption class="menu-caption">Напої</caption>
-        <tr class="menu-tr">
-            <td class="menu-td">
-                <p class="menu-pre-title">Чай чорний/зелений</p>
-            </td>
-            <td class="menu-td">500 мл</td>
-            <td class="menu-td">100 грн</td>
-        </tr>
-        <tr class="menu-tr">
-            <td class="menu-td">
-                <p class="menu-pre-title">Еспресо</p>
-            </td>
-            <td class="menu-td">30 мл</td>
-            <td class="menu-td">100 грн</td>
-        </tr>
-        <tr class="menu-tr">
-            <td class="menu-td">
-                <p class="menu-pre-title">Американо</p>
-            </td>
-            <td class="menu-td">150 мл</td>
-            <td class="menu-td">100 грн</td>
-        </tr>
-        <tr class="menu-tr">
-            <td class="menu-td">
-                <p class="menu-pre-title">Капучино</p>
-            </td>
-            <td class="menu-td">200 мл</td>
-            <td class="menu-td">160 грн</td>
-        </tr>
-        <tr class="menu-tr">
-            <td class="menu-td">
-                <p class="menu-pre-title">Лате</p>
-            </td>
-            <td class="menu-td">200 мл</td>
-            <td class="menu-td">160 грн</td>
-        </tr>
-        </table>
-        <button type="button" class="menu-btn">Забронювати столик</button>
-        </div></div>
     </div>
-    </section>
-
-</body>
-</html>
+</section>
