--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -11,7 +11,7 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.container {
+.container-footer {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
