--- a/src/partials/home-page-footer.html
+++ b/src/partials/home-page-footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container">
+  <div class="container-footer">
     <div class="footer-bloc">
       <h2 class="footer-logo">
         <a href="./index.html" class="footer-logo-link link">MIMIHO</a>
