--- a/src/css/restaurant.css
+++ b/src/css/restaurant.css
@@ -1,4 +1,4 @@
 @import url("./home-page-header.css");
-@import url("./home-page-hero.css");
+@import url("./rest-page-hero.css");
 @import url("./menu.css");
 @import url("./footer.css");
