--- a/src/partials/hotel-page-hero.html
+++ b/src/partials/hotel-page-hero.html
@@ -1,7 +1,7 @@
 <section class="hotelpage-hero-section">
   <div class="hotelpage-container">
     <h1 class="hotelpage-hero-title">MIMIHO</h1>
-    <p class="hotelpage-post-title">Ресторан</p>
+    <p class="hotelpage-post-title">Готель</p>
     <div class="hotelpage-hero-group">
       <a
         href="https://goo.gl/maps/1Gj1eipYqzHHkmQC6"
