--- a/src/css/hotel-page-hero.css
+++ b/src/css/hotel-page-hero.css
@@ -218,7 +218,7 @@
           rgba(0, 0, 0, 0.65),
           rgba(0, 0, 0, 0.65)
         ),
-        url(../img/desktop-hero-img/hotel-hero-descktop-img\ 2x.jpg);
+        url(../img/desktop-hero-img/hotel-hero-descktop-img@2x.jpg);
     }
   }
 
