--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,9 @@
 @import url("./home-page-header.css");
 @import url("./home-page-hero.css");
+
+@import url("./location.css");
+@import url("./locationmobile.css");
+@import url("./locationtablet.css");
+@import url("./locationdesctop.css");
+
 @import url("./footer.css");
