--- a/src/partials/home-page-section5.html
+++ b/src/partials/home-page-section5.html
@@ -13,7 +13,7 @@
           <p class="location-restaurant">Ресторан</p>
           <div class="location-restaurant-div">
             <svg class="location-restaurant-icon" width="12" height="20">
-              <use href="../img/icons-sprite.svg#icon-phone-icon"></use>
+              <use href="./img/icons-sprite.svg#icon-phone-icon"></use>
             </svg>
             <a class="location-restaurant-number" href="tel:095 555 95 33">095 555 95 33</a>
           </div>
@@ -24,7 +24,7 @@
           <p class="location-hotel">Готель</p>
           <div class="location-hotel-div">
             <svg class="location-hotel-icon" width="12" height="20">
-              <use href="../img/icons-sprite.svg#icon-phone-icon"></use>
+              <use href="./img/icons-sprite.svg#icon-phone-icon"></use>
             </svg>
             <a class="location-hotel-number-one" href="tel:066 849 10 89">066 849 10 89</a>
             <a class="location-hotel-number-two" href="tel:067 275 85 40">067 275 85 40</a>
@@ -34,7 +34,7 @@
         <!------------------------- MAP---------------- -->
         <div class="location-map-div">
           <svg class="location-map-icon" width="20" height="20">
-            <use href="../img/icons-sprite.svg#icon-map-icon"></use>
+            <use href="./img/icons-sprite.svg#icon-map-icon"></use>
           </svg>
           <p class="location-address">
             Україна, м. Полтава, вул. Маршала Бірюзова, 15
