--- a/src/partials/home-page-section5.html
+++ b/src/partials/home-page-section5.html
@@ -37,7 +37,7 @@
             <use href="./img/icons-sprite.svg#icon-map-icon"></use>
           </svg>
           <p class="location-address">
-            Україна, м. Полтава, вул. Маршала Бірюзова, 15
+            Україна, м. Полтава, <br> вул. Маршала Бірюзова, 15
           </p>
         </div>
       </div>
