--- a/src/css/locationmobile.css
+++ b/src/css/locationmobile.css
@@ -106,5 +106,9 @@
 
         width: 100%;
         height: 220px;
+
+        border: 1px solid #BABABA;
+        box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
+        border-radius: 2px;
     }
 }
