--- a/src/partials/home-page-section5.html
+++ b/src/partials/home-page-section5.html
@@ -33,12 +33,14 @@
 
         <!------------------------- MAP---------------- -->
         <div class="location-map-div">
-          <svg class="location-map-icon" width="20" height="20">
-            <use href="./img/icons-sprite.svg#icon-map-icon"></use>
-          </svg>
-          <p class="location-address">
-            Україна, м. Полтава, <br> вул. Маршала Бірюзова, 15
-          </p>
+          <a href="https://goo.gl/maps/1Gj1eipYqzHHkmQC6" target="_blank" class="section-map-link">
+            <svg class="location-map-icon" width="20" height="20">
+              <use href="./img/icons-sprite.svg#icon-map-icon"></use>
+            </svg>
+            <p class="location-address">
+              Україна, м. Полтава, <br> вул. Маршала Бірюзова, 15
+            </p>
+          </a>
         </div>
       </div>
       <div class="map">
