--- a/src/partials/home-page-hero.html
+++ b/src/partials/home-page-hero.html
@@ -14,13 +14,17 @@
             </a>
 
             <div class="hero-button-group">
-              <button type="button" class="hero-button">
+              <button type="button" class="hero-button" data-modal-open>
                 Забронювати столик
               </button>
-              <button type="button" class="hero-button">
+              <button type="button" class="hero-button" data-room-open>
                 Забронювати номер
               </button>
             </div>
           </div>
         </div>
       </section>
+
+      
+
+      
