--- a/src/partials/rest-page-hero.html
+++ b/src/partials/rest-page-hero.html
@@ -17,12 +17,13 @@
       </a>
 
       <div class="restpage-button-group">
-        <button type="button" class="restpage-hero-button">
+        <button type="button" class="restpage-hero-button" data-modal-open>
           Забронювати столик
         </button>
-        <button type="button" class="restpage-hero-button">
+        <a href="#menu-anhor"><button type="button" class="restpage-hero-button">
           Переглянути меню
-        </button>
+        </button></a>
+        
       </div>
     </div>
   </div>
