--- a/src/partials/rest-page-section2.html
+++ b/src/partials/rest-page-section2.html
@@ -1,6 +1,6 @@
 <section class="section-menu">
     <div class="container">
-        <h2 class="menu-title">МЕНЮ РЕСТОРАНУ </h2>
+        <h2 id="menu-anhor" class="menu-title">МЕНЮ РЕСТОРАНУ </h2>
         <div class="tablet-position">
             <div class="tablet-left">
                 <table class="menu-table">
