--- a/src/partials/hotel-page-hero.html
+++ b/src/partials/hotel-page-hero.html
@@ -15,10 +15,10 @@
       </a>
 
       <div class="hotelpage-button-group">
-        <button type="button" class="hotelpage-hero-button">
+        <button type="button" class="hotelpage-hero-button" data-room-open>
           Забронювати номер
         </button>
-        <button type="button" class="hotelpage-hero-button">
+        <button type="button" class="hotelpage-hero-button" data-price-open>
           Переглянути ціни
         </button>
       </div>
