--- a/src/partials/rest-page-section2.html
+++ b/src/partials/rest-page-section2.html
@@ -197,7 +197,7 @@
                         <td class="menu-td">160 грн</td>
                     </tr>
                 </table>
-                <button type="button" class="menu-btn" data-modal-open-two>Забронювати столик</button>
+                <button type="button" class="menu-btn">Забронювати столик</button>
             </div>
         </div>
     </div>
