--- a/src/partials/room-page-hero.html
+++ b/src/partials/room-page-hero.html
@@ -30,14 +30,14 @@
     <div class="room-arrow-left">
       <button type="button" class="room-arrow-button">
         <svg class="room-arrow-icon" width="40" height="40">
-          <use href="../img/icons-sprite.svg#icon-left-gold-arrow"></use>
+          <use href="./img/icons-sprite.svg#icon-left-gold-arrow"></use>
         </svg>
       </button>
     </div>
     <div class="room-arrow-right">
       <button type="button" class="room-arrow-button">
         <svg class="room-arrow-icon" width="40" height="40">
-          <use href="../img/icons-sprite.svg#icon-rigth-gold-arrow"></use>
+          <use href="./img/icons-sprite.svg#icon-rigth-gold-arrow"></use>
         </svg>
       </button>
     </div>
