--- a/src/css/room.css
+++ b/src/css/room.css
@@ -1,3 +1,4 @@
 @import url("./room-page-header.css");
 @import url("./room-page-hero.css");
 @import url("./room-page-section.css");
+@import url("./modal-table.css");
