--- a/src/partials/room-page-hero.html
+++ b/src/partials/room-page-hero.html
@@ -20,7 +20,7 @@
       </a>
 
       <div class="roompage-button-group">
-        <button type="button" class="roompage-hero-button">
+        <button type="button" class="roompage-hero-button" data-price-open>
           Переглянути ціни
         </button>
       </div>
