--- a/src/partials/room-page-section1.html
+++ b/src/partials/room-page-section1.html
@@ -65,7 +65,7 @@
     </div>
   </div>
   <div class="dl-order-wrapper">
-    <button type="button" class="dl-roomorder-btn">
+    <button type="button" class="dl-roomorder-btn" data-room-open>
       ОФОРМИТИ БРОНЮВАННЯ
     </button>
     <a class="link dl-back-link" href="">Повернутися до перегляду номерів</a>
