--- a/src/css/room-page-section.css
+++ b/src/css/room-page-section.css
@@ -1,4 +1,12 @@
+
 .dl-container {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  line-height: 1.22;
+  letter-spacing: 0.014em;
+  color: #7a7a7a;
+  background-color: #fffdee;
+
   width: 100%;
   margin: 0 auto;
 }
