--- a/src/partials/room-page-section1.html
+++ b/src/partials/room-page-section1.html
@@ -68,6 +68,6 @@
     <button type="button" class="dl-roomorder-btn" data-room-open>
       ОФОРМИТИ БРОНЮВАННЯ
     </button>
-    <a class="link dl-back-link" href="">Повернутися до перегляду номерів</a>
+    <a class="link dl-back-link" href="./hotel.html">Повернутися до перегляду номерів</a>
   </div>
 </section>
