--- a/src/css/home-page-header.css
+++ b/src/css/home-page-header.css
@@ -136,6 +136,13 @@
     padding-top: 8px;
     padding-bottom: 8px;
   }
+
+}
+
+@media screen and (min-width:320px) and ( max-width:413px) {
+  .header-social-list {
+    top: 678px;
+  }
 }
 
 @media screen and (min-width: 414px) {
