--- a/src/partials/room-page-section1.html
+++ b/src/partials/room-page-section1.html
@@ -1,5 +1,5 @@
 <section class="doublelux dl-container">
-  <div class="dl-comfort">
+  <div class="dl-comfort ">
     <h2 class="dl-sec-heaher">ЗРУЧНОСТІ У НОМЕРІ</h2>
     <p class="dl-comfort-text">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
@@ -52,6 +52,10 @@
           Amet minim mollit non deserunt ullamco est sit aliqua dolor do
           amet sint.
         </p>
+        <p class="dl-maintext">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+          amet sint.
+        </p>
       </div>
     </div>
     <div class="dl-about">
@@ -64,10 +68,14 @@
       </div>
     </div>
   </div>
-  <div class="dl-order-wrapper">
+  <!-- <div class="dl-order-wrapper"> -->
     <button type="button" class="dl-roomorder-btn" data-room-open>
       ОФОРМИТИ БРОНЮВАННЯ
     </button>
-    <a class="link dl-back-link" href="./hotel.html">Повернутися до перегляду номерів</a>
-  </div>
+    <a class="link dl-back-link" href="./hotel.html">Повернутися до перегляду номерів
+      <svg class="last-link">
+        <use href="../img/icons-sprite.svg#icon-arrow-disabled-rigth" class="arrow-disabled"></use>
+      </svg>
+    </a>
+  <!-- </div> -->
 </section>
