--- a/src/partials/room-page-section1.html
+++ b/src/partials/room-page-section1.html
@@ -74,7 +74,7 @@
     </button>
     <a class="link dl-back-link" href="./hotel.html">Повернутися до перегляду номерів
       <svg class="last-link">
-        <use href="../img/icons-sprite.svg#icon-arrow-disabled-rigth" class="arrow-disabled"></use>
+        <use href="./img/icons-sprite.svg#icon-arrow-disabled-rigth" class="arrow-disabled"></use>
       </svg>
     </a>
   <!-- </div> -->
