--- a/src/css/restaurant.css
+++ b/src/css/restaurant.css
@@ -1,5 +1,6 @@
 @import url("./home-page-header.css");
 @import url("./rest-page-hero.css");
+@import url("./rest-section1.css");
 @import url("./menu.css");
 @import url("./footer.css");
 
