--- a/src/partials/home-page-section5.html
+++ b/src/partials/home-page-section5.html
@@ -5,7 +5,7 @@
         <h2 class="location-visually-hidden">
           Інформація про розміщення комплексу та номера телефонів
         </h2>
-        <p class="location-mimino">mimino</p>
+        <p class="location-mimino">MIMIHO</p>
 
         <!------------------ RESTAURANT--------------------- -->
         <p class="location-sentense">Ресторанно-готельний комплекс</p>
