--- a/src/partials/rest-page-section1.html
+++ b/src/partials/rest-page-section1.html
@@ -10,7 +10,7 @@
         veniam consequat sunt nostrud amet.
       </p>
       <img
-        srcset="../img/section1-img/rest-foto1@2x.jpg 2x"
+        srcset="./img/section1-img/rest-foto1@2x.jpg 2x"
         src="./img/section1-img/rest-foto1.jpg" alt="shef" class="rest-page-img2" width="280">
     </div>
     <!-- --Group-2-- -->
