--- a/src/css/home-page-hero.css
+++ b/src/css/home-page-hero.css
@@ -30,6 +30,7 @@
 }
 
 .hero-title {
+  text-align: center;
   max-width: 303px;
   margin-left: auto;
   margin-right: auto;
@@ -54,7 +55,7 @@
 
   color: #ffffff;
 }
-.hero-subtitle {
+.hero-subtitle {  
   margin-bottom: 113px;
 
   font-family: 'Times New Roman';
