--- a/src/css/rest-section1.css
+++ b/src/css/rest-section1.css
@@ -1,8 +1,12 @@
+body {
+  overflow: hidden;
+}
 
 .rest-page-section1 {
   background-color: #fffdee;
   padding-top: 16px;
   padding-bottom: 20px;
+  
 }
 
 .rest-page-container {
