--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -192,11 +192,11 @@ margin-top: 64px;
 
 
 @media screen and (min-width: 1280px) {
-    .container {
-        max-width: 1140px;
+.container {
+        width: 1140px;
     }
     .section-menu > .container {
-    max-width: 960px;
+    max-width: 1280px;
 }
 .section-menu {
     padding-top: 58px;
