--- a/src/css/rest-section1.css
+++ b/src/css/rest-section1.css
@@ -3,10 +3,9 @@ body {
 }
 
 .rest-page-section1 {
-  background-color: #fffdee;
+  background-color: #FFFDEE;
   padding-top: 16px;
   padding-bottom: 20px;
-  
 }
 
 .rest-page-container {
@@ -19,11 +18,11 @@ body {
 }
 
 .rest-page-title {
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Times New Roman', Times, serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 1.15;
-  color: #b4b4b4;
+  color: #B4B4B4;
   margin-bottom: 12px;
 }
 
@@ -44,7 +43,7 @@ body {
   font-size: 12px;
   line-height: 1.25;
   letter-spacing: 0.02em;
-  color: #7a7a7a;
+  color: #7A7A7A;
   margin-bottom: 28px;
 }
 
@@ -54,12 +53,19 @@ body {
   font-size: 12px;
   line-height: 1.25;
   letter-spacing: 0.02em;
-  color: #c79002;
+  color: #C79002;
 }
 
 .rest-page-img2 {
+  width: 244px;
+  height: 322px;
   margin-left: auto;
   z-index: 999;
+}
+
+.rest-page-img1 {
+  width: 200px;
+  height: 278px;
 }
 
 .rest-page-group1 {
@@ -79,7 +85,6 @@ body {
   gap: 20px;
   align-items: center;
 }
-
 
 .rest-page-icon-wrap {
   display: flex;
@@ -105,15 +110,11 @@ body {
   border-radius: 2px;
 }
 
-
-
-
 @media screen and (max-width: 413px) {
   .rest-page-container {
     width: 100%;
   }
 }
-
 
 @media screen and (min-width: 414px) {
   .rest-page-container {
@@ -159,10 +160,12 @@ body {
   }
 
   .rest-page-img2 {
-    width: 400px;
     position: absolute;
-    right: 112px;
+    left: 50%;
     top: -32px;
+    width: 400px;
+    height: 524px;
+    transform: translateX(-5%);
   }
 
   .rest-page-text2 {
@@ -182,7 +185,6 @@ body {
   .rest-page-group3 {
     margin-top: 0;
   }
-
 
   .rest-page-img1,
   .rest-page-img2 {
@@ -228,10 +230,12 @@ body {
   }
 
   .rest-page-img2 {
-    width: 460px;
     position: absolute;
-    right: 179px;
+    left: 50%;
     top: -33px;
+    width: 460px;
+    height: 574px;
+    transform: translateX(-5%);
   }
 
   .rest-page-img1 {
