--- a/src/css/hotel.css
+++ b/src/css/hotel.css
@@ -1,5 +1,6 @@
 @import url("./home-page-header.css");
 @import url("./hotel-page-hero.css");
+@import url("./hotel-page-section1.css");
 @import url("./footer.css");
 
 @import url("./modal-table.css");
